httpserver/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - winkyi.com
      secretName: httpserver-tls
  rules:
    - host: winkyi.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: winkyi-httpserver
                port:
                  number: 9999
